@@ -52,6 +52,7 @@ import uk.gov.justice.laa.portal.landingpage.dto.FirmDto;
 import uk.gov.justice.laa.portal.landingpage.dto.PaginatedAuditUsers;
 import uk.gov.justice.laa.portal.landingpage.entity.EntraUser;
 import uk.gov.justice.laa.portal.landingpage.entity.Permission;
+import uk.gov.justice.laa.portal.landingpage.entity.SilasAccountStatus;
 import uk.gov.justice.laa.portal.landingpage.entity.UserProfileSilasStatus;
 import uk.gov.justice.laa.portal.landingpage.entity.UserType;
 import uk.gov.justice.laa.portal.landingpage.forms.FirmSearchForm;
@@ -136,7 +137,7 @@ class AuditControllerTest {
                 .userType("External")
                 .firmAssociation("Test Firm")
                 .firmCode("123456")
-                .accountStatus(UserProfileSilasStatus.COMPLETE)
+                .accountStatus(SilasAccountStatus.ACTIVE)
                 .isMultiFirmUser(false)
                 .profileCount(1)
                 .build();
@@ -930,64 +931,6 @@ class AuditControllerTest {
     }
 
     @Test
-    void displayCompleteUserAuditDetail_withValidUserId_returnsDetailView() {
-        // Given
-        UUID userId = UUID.randomUUID();
-        AuditUserDetailDto mockUserDetail = AuditUserDetailDto
-                .builder()
-                .userId(userId.toString())
-                .email("john.doe@example.com")
-                .firstName("John")
-                .lastName("Doe")
-                .fullName("John Doe")
-                .isMultiFirmUser(false)
-                .profiles(Collections.emptyList())
-                .build();
-
-        TechServicesUser.GuestUserStatus guestUserStatus = TechServicesUser.GuestUserStatus.builder()
-                .disabledReason("UserRequest")
-                .build();
-
-        TechServicesUser.CustomSecurityAttributes customSecurityAttributes = TechServicesUser.CustomSecurityAttributes.builder()
-                .guestUserStatus(guestUserStatus)
-                .build();
-
-        TechServicesUser techServicesUser = TechServicesUser.builder()
-                .id(UUID.randomUUID().toString())
-                .givenName("Test")
-                .surname("User")
-                .customSecurityAttributes(customSecurityAttributes)
-                .build();
-
-        GetUserResponse getUserResponse = GetUserResponse.builder()
-                .success(true)
-                .user(techServicesUser)
-                .build();
-
-        TechServicesApiResponse<GetUserResponse> techServicesResponse = TechServicesApiResponse.success(getUserResponse);
-
-        when(techServicesClient.getUser(any())).thenReturn(techServicesResponse);
-        when(userService.getAuditUserDetail(userId, 1, 5)).thenReturn(mockUserDetail);
-        when(userAccountStatusService
-                .getDisableUserReasonNameByEntraDescription(eq("UserRequest")))
-                .thenReturn("User Request");
-
-        when(userService.determineStatusBadgeForAuditUser(any(AuditUserDetailDto.class)))
-                .thenReturn(UserProfileSilasStatus.COMPLETE);
-
-        // When
-        String viewName = auditController.displayFullUserAuditDetail(userId, 1, 5, false, model);
-
-        // Then
-        assertThat(viewName).isEqualTo("user-audit/full-details");
-        assertThat(model.getAttribute("user")).isEqualTo(mockUserDetail);
-        TechServicesUser returnedTechServicesUser = (TechServicesUser) model.getAttribute("entraUser");
-        assertThat(returnedTechServicesUser).isNotNull();
-        assertThat(model.getAttribute("entraUserDisableReason")).isEqualTo("User Request");
-        verify(userService, times(1)).getAuditUserDetail(userId, 1, 5);
-    }
-
-    @Test
     void deleteUserWithoutProfileConfirm_shouldReturnConfirmationView() {
         // Given
         String entraUserId = UUID.randomUUID().toString();
@@ -1045,7 +988,7 @@ class AuditControllerTest {
         List<uk.gov.justice.laa.portal.landingpage.viewmodel.DeleteUserReasonViewModel> reasons =
                 (List<uk.gov.justice.laa.portal.landingpage.viewmodel.DeleteUserReasonViewModel>) model.getAttribute("deleteReasons");
         assertThat(reasons).hasSize(1);
-        assertThat(reasons.get(0).getCode()).isEqualTo("CyberRisk");
+        assertThat(reasons.getFirst().getCode()).isEqualTo("CyberRisk");
         verify(userService).getDeleteUserReasons(true);
     }
 
